# QuickSeek

./: .gitignore  CMakeLists.txt  QuickSeek.vcxproj  QuickSeek.vcxproj.filters
forms/: ScanningWindow.ui  main_window.ui  scan_window.ui
resource/: QuickSeek.rc  QuickSeekUI.qrc  quick_seek.rc
src/: Config.h  Controller.cpp  Controller.h  ControllerBase.h  Model.cpp  Model.h  ModelBase.h  PrefixTree.cpp  PrefixTree.h  PrefixTree.tcc  QuickSeekUI.cpp  QuickSeekUI.h  ScanningWindow.cpp  ScanningWindow.h  View.cpp  View.h  ViewBase.h  config.hpp  controller.cpp  controller.hpp  controller_base.hpp  file_manager.cpp  file_manager.hpp  main.cpp  model.cpp  model.hpp  model_base.hpp  prefix_tree.cpp  prefix_tree.hpp  prefix_tree.tpp  qt_main_window.cpp  qt_main_window.hpp  qt_mainwindow.cpp  qt_scan_window.cpp  qt_scan_window.hpp  qt_view.cpp  qt_view.hpp  view.hpp  view_base.hpp
